@startuml

interface ITransport {
     + VehicleIdentificationNumber: string
     + Year: int
     + Make: Make
     + VehicleColor: Color
     + FuelType: FuelType
     + EngineCapacity: double
     + Price: int
}

class Transport {
    + VehicleIdentificationNumber: string
    + Year: int
    + Make: Make
    + VehicleColor: Color
    + FuelType: FuelType
    + EngineCapacity: double
    + Price: int
}

class PassengerCar {
    + Fields_and_Methods_of_Class_PassengerCar
}

class Truck {
    + Fields_and_Methods_of_Class_Truck
}

class AllTerrainVehicle {
    + Fields_and_Methods_of_Class_AllTerrainVehicle
}

ITransport <|.. Transport
Transport --|> PassengerCar
Transport --|> Truck
Transport --|> AllTerrainVehicle

@enduml
